- how to use - sms setting area

--- a/baseApp/src/main/assets/how_to_use.html
+++ b/baseApp/src/main/assets/how_to_use.html
@@ -13,21 +13,27 @@
         body {
            font-family: RobotoRegular;
            text-align: justify;
-           font-size: 14px;
+           font-size: 18px;
            line-height: 18px;
         }
         p {
             margin-top: 8px;
             margin-bottom: 8px;
+            margin-left: 10px;
+            margin-right: 10px;
         }
         p.medium {
+            font-size: 20px;
+            line-height: 18px;
             font-family: RobotoMedium;
+            margin-left: 8px;
+            margin-right: 8px;
         }
         table {
             right: 0px;
             width:80%;
             text-align: justify;
-            font-size: 14px;
+            font-size: 16px;
             line-height: 18px;
         }
 
@@ -45,8 +51,8 @@
         li {
             margin-top: 8px;
             margin-bottom: 8px;
-            margin-left: 0px;
-            margin-right: 0px;
+            margin-left: 15px;
+            margin-right: 15px;
         }
 
         ul .king_style{
@@ -71,46 +77,94 @@
           vertical-align: middle;
         }
 
+
+
     </style>
 </head>
 <body>
-<p class="medium">Please take note of our payment times.</p>
+<p class="medium"><b>1. Thiết lập lịch tưới tiêu cố định cho từng khu vực</b></p>
 <ul>
-    <li><a>Payments made to TymeDigital customers will be processed immediately. </a></li>
+    <li><a>Thiết lập lịch tưới tiêu cố định 1 lần trong ngày: </a></li>
 
-    <li><a>Payments made to other banks before the times shown below will be processed
-        on the same day; payments made after these times will be processed
-        on the next available business day:</a>
-    </li>
-    <table>
-        <tr>
-            <th>
-                <ul class="king_style">
-                    <li  class="king_style">Monday to Friday</li>
-                </ul>
-            </th>
-            <th>15:00</th>
-        </tr>
-        <tr>
-            <td>
-                <ul class="king_style">
-                    <li class="king_style">Saturdays</li>
-                </ul>
-            </td>
-            <td>10:15</td>
-        </tr>
-    </table>
-    <li><a>Payments made to other banks on Sundays and Public Holidays,
-        will be processed on the next available business day.</a>
+
+</ul>
+
+<p class="medium"><b>2. Thiết lập lịch tưới tiêu khác trong ngày cho khu vực</b></p>
+<ul>
+    <li><a>Thiết lập lịch tưới tiêu cố định 1 lần trong ngày: </a></li>
+
+
+</ul>
+
+<p class="medium"><b>3. Thiết lập ngắt tưới tiêu trong ngày</b></p>
+<ul>
+    <li><a>Thiết lập lịch tưới tiêu cố định 1 lần trong ngày: </a></li>
+
+
+</ul>
+<p class="medium"><b>4. Đổi mật khẩu</b></p>
+<ul>
+    <li><a>Thiết lập lịch tưới tiêu cố định 1 lần trong ngày: </a></li>
+
+
+</ul>
+<p class="medium"><b>5. Thiết lập lai mặc định</b></p>
+<ul>
+    <li><a>Thiết lập lịch tưới tiêu cố định 1 lần trong ngày: </a></li>
+
+
+</ul>
+<p class="medium"><b>6. Xem lại lịch tưới tiêu cố định</b></p>
+<ul>
+    <li><a>Thiết lập lịch tưới tiêu cố định 1 lần trong ngày: </a></li>
+
+
+</ul>
+<p class="medium"><b>7. Thiết lập số van được sử dụng trong 1 khu vực</b></p>
+<ul>
+    <li><a>Thiết lập lịch tưới tiêu cố định 1 lần trong ngày: </a></li>
+
+
+</ul>
+<p class="medium"><b>8. Tự động hoặc không tự động gởi lịch tưới vào 6 giờ sáng của ngày tưới</b>
+</p>
+<ul>
+    <li><a>Thiết lập lịch tưới tiêu cố định 1 lần trong ngày: </a></li>
+
+
+</ul>
+<p class="medium"><b>9. On/Off thiết bị bằng SMS</b></p>
+<ul>
+    <li><a>Thiết lập lịch tưới tiêu cố định 1 lần trong ngày: </a></li>
+
+
+</ul>
+<p class="medium"><b>10. Đổi số điện thoại hệ thống gởi đến</b></p>
+<ul>
+    <li><a>Thiết lập lịch tưới tiêu cố định 1 lần trong ngày: </a></li>
+
+
+</ul>
+
+<p class="medium"><b>* Một số điểm cần chú ý:</b></p>
+<ul>
+    <li><a>Khi đến lịch tưới khu vực 1 thì người dùng nhận tin nhắn với nội dung: “KV1 mo”.</a></li>
+
+    <li><a>Nếu soạn tin nhắn đúng thì hệ thống trả về tin nhắn với nội dung: “Dung”.</a></li>
+
+    <li><a>Nếu soạn tin nhắn sai thì hệ thống trả về tin nhắn với nội dung: “Loi”.</a></li>
+
+    <li><a>Nếu soạn tin nhắn sai mật khẩu thì hệ thống trả về tin nhắn với nội dung: “Sai pass”.</a>
     </li>
 
-    <li><a>Please note: It can take up to 2 business days for the other bank to
-        process the payment into your beneficiary’s account.</a>
+    <li><a>Nếu không nhận được tin nhắn trong vòng 10 phút thì hệ thống chưa nhận được lệnh điều
+        khiển. Yêu cầu người dùng kiểm tra lại số điện thoại hệ thống hay đường truyền mạng.</a>
     </li>
 
-    <li><a>For fraud prevention purposes, TymeDigital reserves the right to delay certain
-        payments.</a>
-    </li>
+    <li><a>Để đảm bảo khi hết tiền và thời hạn sử dụng tài khoản của SIM của hệ thống đang sử dụng.
+        Người dùng nên sử dụng SIM trả sau và đóng tiền hằng tháng cho SIM điện thoại này.</a></li>
+
+    <li><a>Mọi thắc mắc hay góp ý xin vui lòng liên hệ đến Mr.Long số điện thoại: <b>0633702102</b> hoặc <b>0919786543</b>.</a></li>
 </ul>
 
 </body>
